<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.carta.carta_display.categories.VinosFragment"
    android:background="@drawable/bkg_vinos">

    <TextView
        android:id="@+id/txtTintos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/ss"
        android:textStyle="bold"
        android:textSize="28sp"
        android:text="@string/tintos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBlancos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/ss"
        android:textStyle="bold"
        android:textSize="28sp"
        android:text="@string/blancos"
        app:layout_constraintEnd_toEndOf="@+id/txtTintos"
        app:layout_constraintStart_toStartOf="@+id/txtTintos"
        app:layout_constraintTop_toBottomOf="@+id/txtTintos" />

    <TextView
        android:id="@+id/txtRose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/ss"
        android:textStyle="bold"
        android:textSize="28sp"
        android:text="@string/rose"
        app:layout_constraintEnd_toEndOf="@+id/txtTintos"
        app:layout_constraintStart_toStartOf="@+id/txtTintos"
        app:layout_constraintTop_toBottomOf="@+id/txtBlancos" />

    <TextView
        android:id="@+id/txtPostre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/ss"
        android:textStyle="bold"
        android:textSize="28sp"
        android:text="@string/de_postre"
        app:layout_constraintEnd_toEndOf="@+id/txtTintos"
        app:layout_constraintStart_toStartOf="@+id/txtTintos"
        app:layout_constraintTop_toBottomOf="@+id/txtRose" />

    <TextView
        android:id="@+id/txtCopa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/ss"
        android:textStyle="bold"
        android:textSize="28sp"
        android:text="@string/por_copa"
        app:layout_constraintEnd_toEndOf="@+id/txtTintos"
        app:layout_constraintStart_toStartOf="@+id/txtTintos"
        app:layout_constraintTop_toBottomOf="@+id/txtPostre" />
</androidx.constraintlayout.widget.ConstraintLayout>