<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_fab_txt">

        <TextView
            android:id="@+id/txtRequestMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/futura_lt"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/entry_request_msg"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRequestPositive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRequestMsg"
            android:layout_marginHorizontal="10dp"
            android:text="@string/entry_request_positive_btn"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/btnRequestNegative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnRequestPositive"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/omitir"
            app:cornerRadius="10dp" />

        <ProgressBar
            android:id="@+id/pbEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/dark_olive"
            android:visibility="invisible" />


    </RelativeLayout>

</RelativeLayout>